[package]
name = "bbse"
version = "0.2.1"
edition = "2021"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
description = "Backward Binary Search Encoding — minimal and deterministic scheme for sorted domains"
license = "MIT"
repository = "https://github.com/shurankain/bbse"
readme = "README.md"
keywords = ["encoding", "binary", "search", "bit", "range"]
categories = ["compression", "data-structures", "algorithms"]

[features]
default = ["std"]
std = []

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
